# dutler

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CLA.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY.md  env.sh  flash.sh
.claude/skills/run-dutler/: SKILL.md  driver.sh
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
hardware/: README.md
hardware/v1/DUTler_v1/: BOM.md  DUTler_v1.kicad_pcb  DUTler_v1.kicad_pro  DUTler_v1.kicad_sch
hardware/v2/DUTler_V2/: DUTler_V2.kicad_pcb  DUTler_V2.kicad_pro  DUTler_V2.kicad_sch
include/: config.h
src/: bridge.c  bridge.h  command.c  console.c  crc32.c  crc32.h  debug.c  debug.h  flash_port.h  flash_port_pico.c  flash_port_rp2040.c  main.c  out.c  out.h  outputs.c  parse.c  parse.h  relay.c  relay.h  settings.c  settings.h  settings_codec.c  settings_codec.h  tusb_config.h  usb_descriptors.c
src/core/: command.c  command.h  kvstore.c  kvstore.h  outputs.c  outputs.h  settings.c  settings.h  settings_codec.c  settings_codec.h
src/platform/: bridge.c  console.c  console.h  debug.c  flash_port.h  flash_port_pico.c  usb_descriptors.c  usb_descriptors.h
src/util/: crc32.c  lineedit.c  lineedit.h  numparse.c  numparse.h
tests/: CMakeLists.txt  test_command.c  test_kvstore.c  test_lineedit.c  test_main.c  test_pure.c  test_settings.c
tests/fakes/: fake_bridge.c  fake_console.c  fake_debug.c  fake_sdk.c  fakes.h  flash_port_fake.c
tests/shims/: tusb.h
tests/shims/hardware/: watchdog.h
tests/shims/pico/: bootrom.h  stdlib.h  time.h
tools/: bridge_test.py  check_spdx.sh  debug_capture.py  out_test.py  relay_test.py  reset_bootsel.py
